HNC-292: Fixed alignment of monthly premiums in LG

--- a/WebContent/framework/modules/less/home/results.less
+++ b/WebContent/framework/modules/less/home/results.less
@@ -273,8 +273,8 @@
 		.priceMode & {
 			.firstPayment,
 			.totalPayment {
-				float: left;
-				width: 50%;
+				/*float: left;
+				width: 50%;*/
 			}
 			.totalPayment {
 				padding-left: 4%;
